--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,7 @@
   publish = "." # ルートディレクトリを公開
   command = ""         # ビルドなし（静的アップロード）
   framework = "#static" # フレームワーク検出を無効化
+  functions = "netlify/functions"
 
 [dev]
   command = "node server.js" # ローカル開発時のコマンド
@@ -13,6 +14,11 @@
   to = "/op-web/"
   status = 301
   force = true
+
+[[redirects]]
+  from = "/api/export/results"
+  to = "/.netlify/functions/export-results"
+  status = 200
 
 [[headers]]
   for = "/*"
